Bug 1232939 - Ensure the opaque region of a fixed background layer is correctly clipped. r=mstange, a=sledru

--HG--
extra : source : 110fb501fa45c60c25c3fa0d53fb643cb7839bed